--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Byte-compiled / optimized / DLL files
 #Adding config.py file
 config.py
+
+# Adding additional files
 API_practice.ipynb
 random_numbers.ipynb
 __pycache__/
